--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -99,6 +99,12 @@ NBA2DPA:
     TEST_NAME: "nba2dpa"
   <<: *ltlcross_template
 
+NBA2DRA:
+  stage: test
+  variables:
+    TEST_NAME: "safra"
+  <<: *ltlcross_template
+
 # Conversions
 
 DPA Conversion:
