--- a/build.gradle
+++ b/build.gradle
@@ -26,9 +26,11 @@ buildscript {
 
 plugins {
     // https://github.com/tbroyer/gradle-apt-plugin
+    // https://plugins.gradle.org/plugin/net.ltgt.apt
     id 'net.ltgt.apt-idea' version '0.15'
     // https://github.com/tbroyer/gradle-errorprone-javacplugin-plugin
-    id 'net.ltgt.errorprone-javacplugin' version '0.1'
+    // https://plugins.gradle.org/plugin/net.ltgt.errorprone-javacplugin
+    id 'net.ltgt.errorprone-javacplugin' version '0.2'
 }
 
 // Languages
@@ -71,9 +73,9 @@ dependencies {
     // https://immutables.github.io/
     compileOnly 'org.immutables:value:2.5.6:annotations'
 
-    compile 'com.google.guava:guava:24.1-jre'
+    compile 'com.google.guava:guava:25.0-jre' // https://mvnrepository.com/artifact/com.google.guava/guava/latest
     compile 'it.unimi.dsi:fastutil:8.1.1'
-    compile 'org.antlr:antlr4-runtime:4.7.1'
+    compile 'org.antlr:antlr4-runtime:4.7.1' // https://mvnrepository.com/artifact/org.antlr/antlr4-runtime/latest
     compile 'de.tum.in:jbdd:0.3.2'
     compile 'de.tum.in:naturals-util:0.10.0'
     compile 'commons-cli:commons-cli:1.4'
@@ -84,9 +86,9 @@ dependencies {
     testCompile 'junit:junit:4+'
     testCompile 'org.hamcrest:hamcrest-library:1.3'
 
-    antlr 'org.antlr:antlr4:4.7.1' // Introduces unused runtime dependencies
+    antlr 'org.antlr:antlr4:4.7.1' // Introduces unused runtime dependencies; fixed in antlr.gradle
     annotationProcessor 'org.immutables:value:2.5.6'
-    errorprone 'com.google.errorprone:error_prone_core:2.2.0'
+    errorprone 'com.google.errorprone:error_prone_core:2.3.1'
 }
 
 // Add resources directory for native libraries.
