--- a/config/logging.properties
+++ b/config/logging.properties
@@ -2,7 +2,7 @@
 handlers = java.util.logging.ConsoleHandler
 # Default global logging level.
 # Loggers and Handlers may override this level
-owl.level = INFO
+owl.level = FINEST
 owl.factories.jbdd.GcManagedFactory.level = FINEST
 java.util.logging.ConsoleHandler.level = FINEST
 java.util.logging.ConsoleHandler.formatter = java.util.logging.SimpleFormatter
