--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ buildscript {
 plugins {
     // https://github.com/tbroyer/gradle-apt-plugin
     // https://plugins.gradle.org/plugin/net.ltgt.apt
+    id 'net.ltgt.apt' version '0.15'
     id 'net.ltgt.apt-idea' version '0.15'
     // https://github.com/tbroyer/gradle-errorprone-javacplugin-plugin
     // https://plugins.gradle.org/plugin/net.ltgt.errorprone-javacplugin
@@ -71,24 +72,24 @@ repositories {
 
 dependencies {
     // https://immutables.github.io/
-    compileOnly 'org.immutables:value:2.5.6:annotations'
+    compileOnly 'org.immutables:value:2.6.1:annotations'
 
-    compile 'com.google.guava:guava:25.0-jre' // https://mvnrepository.com/artifact/com.google.guava/guava/latest
-    compile 'it.unimi.dsi:fastutil:8.1.1'
+    compile 'com.google.guava:guava:25.1-jre' // https://mvnrepository.com/artifact/com.google.guava/guava/latest
+    compile 'it.unimi.dsi:fastutil:8.2.1'
     compile 'org.antlr:antlr4-runtime:4.7.1' // https://mvnrepository.com/artifact/org.antlr/antlr4-runtime/latest
     compile 'de.tum.in:jbdd:0.3.2'
     compile 'de.tum.in:naturals-util:0.10.0'
     compile 'commons-cli:commons-cli:1.4'
     compile files('lib/jhoafparser-1.1.1-patched.jar')
 
-    testCompileOnly 'org.immutables:value:2.5.5:annotations'
+    testCompileOnly 'org.immutables:value:2.6.1:annotations'
 
     testCompile 'junit:junit:4+'
     testCompile 'org.hamcrest:hamcrest-library:1.3'
 
     antlr 'org.antlr:antlr4:4.7.1' // Introduces unused runtime dependencies; fixed in antlr.gradle
-    annotationProcessor 'org.immutables:value:2.5.6'
     errorprone 'com.google.errorprone:error_prone_core:2.3.1'
+    annotationProcessor 'org.immutables:value:2.6.1'
 }
 
 // Add resources directory for native libraries.
@@ -133,8 +134,8 @@ def proGuardTask = task proguard(name: "proguard", type: proguard.gradle.ProGuar
 
     dontwarn 'com.oracle.jmc.**'
     dontwarn 'org.immutables.**'
-    dontwarn 'afu.org.checkerframework.checker.**'
-    dontwarn 'org.checkerframework.checker.**'
+    dontwarn 'afu.org.checkerframework.**'
+    dontwarn 'org.checkerframework.**'
 
     //noinspection GroovyAssignabilityCheck
     injars configurations.findByName('runtimeClasspath').getFiles(), filter: '!META-INF/**,**.class'
