Update gradle; update analysis; silence errorprone nags; fix javadoc nags; update proguard; restructure gradle build; add specialized strix jar + entry point annotations

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,7 +25,8 @@ Build:
     - $GRADLE
   script:
     - ./gradlew --no-daemon check minimizedDistZip
-    - scripts/check_binaries.sh
+    - unzip -d build/unzipped build/distributions/*.zip
+    - scripts/check_binaries.sh build/unzipped/owl-*/bin
   artifacts:
     paths:
     - build/tmp/
