--- a/build.gradle
+++ b/build.gradle
@@ -87,14 +87,17 @@ dependencies {
     compile 'commons-cli:commons-cli:1.4'
     compile files('lib/jhoafparser-1.1.1-patched.jar')
 
-    testCompileOnly 'org.immutables:value:2.6.1:annotations'
-
-    testCompile 'junit:junit:4+'
-    testCompile 'org.hamcrest:hamcrest-library:1.3'
+    testCompile("org.junit.jupiter:junit-jupiter-api:5.2.0")
+    testCompile("org.junit.jupiter:junit-jupiter-params:5.2.0")
+    testRuntime("org.junit.jupiter:junit-jupiter-engine:5.2.0")
 
     antlr 'org.antlr:antlr4:4.7.1' // Introduces unused runtime dependencies; fixed in antlr.gradle
     errorprone 'com.google.errorprone:error_prone_core:2.3.1'
     annotationProcessor 'org.immutables:value:2.6.1'
+}
+
+test {
+    useJUnitPlatform()
 }
 
 // ---------------- Startup Scripts ----------------
